--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "html-to-image": "^1.11.11",
-    "react": "^17.0.2",
+    "react": "^18.3.1",
     "react-color": "^2.19.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.3.1",
     "react-qr-code": "^2.0.13",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.0"
   },
